--- a/ParticleStorm/ParticleStorm.vcxproj
+++ b/ParticleStorm/ParticleStorm.vcxproj
@@ -121,14 +121,17 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="CodeGraveyard.cpp" />
     <ClCompile Include="Environment.cpp" />
     <ClCompile Include="Main.cpp" />
-    <ClCompile Include="SDL_Circles.cpp" />
+    <ClCompile Include="PhysicsEngine.cpp" />
+    <ClCompile Include="RenderEngineSDL.cpp" />
     <ClCompile Include="Test.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Environment.h" />
-    <ClInclude Include="SDL_Circles.h" />
+    <ClInclude Include="PhysicsEngine.h" />
+    <ClInclude Include="RenderEngineSDL.h" />
     <ClInclude Include="Test.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
