--- a/ParticleStorm/ParticleStorm.vcxproj
+++ b/ParticleStorm/ParticleStorm.vcxproj
@@ -125,12 +125,16 @@
     <ClCompile Include="Environment.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="PhysicsEngine.cpp" />
+    <ClCompile Include="QuadTree.cpp" />
+    <ClCompile Include="Rect.cpp" />
     <ClCompile Include="RenderEngineSDL.cpp" />
     <ClCompile Include="Test.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Environment.h" />
     <ClInclude Include="PhysicsEngine.h" />
+    <ClInclude Include="QuadTree.h" />
+    <ClInclude Include="Rect.h" />
     <ClInclude Include="RenderEngineSDL.h" />
     <ClInclude Include="Test.h" />
   </ItemGroup>
