Working with uniforms, have an annoying bug related to sending mvp matrix to shader

--- a/ParticleStorm/ParticleStorm.vcxproj.filters
+++ b/ParticleStorm/ParticleStorm.vcxproj.filters
@@ -101,6 +101,9 @@
     <ClInclude Include="RenderEngineVulkan.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="TestSquare.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="test.frag">
