--- a/ParticleStorm/ParticleStorm.vcxproj
+++ b/ParticleStorm/ParticleStorm.vcxproj
@@ -145,6 +145,7 @@
     <ClInclude Include="RenderEngineVulkan.h" />
     <ClInclude Include="SessionManager.h" />
     <ClInclude Include="Stats.h" />
+    <ClInclude Include="TestSquare.h" />
     <ClInclude Include="Timer.h" />
     <ClInclude Include="Utils.h" />
   </ItemGroup>
