--- a/ParticleStorm/ParticleStorm.vcxproj
+++ b/ParticleStorm/ParticleStorm.vcxproj
@@ -128,6 +128,7 @@
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="NumberGenerator.cpp" />
     <ClCompile Include="PhysicsEngine.cpp" />
+    <ClCompile Include="PhysicsThread.cpp" />
     <ClCompile Include="QuadTree.cpp" />
     <ClCompile Include="Rect.cpp" />
     <ClCompile Include="RenderEngineVulkan.cpp" />
@@ -135,9 +136,11 @@
     <ClCompile Include="Timer.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="ConcurrentQueue.h" />
     <ClInclude Include="Environment.h" />
     <ClInclude Include="NumberGenerator.h" />
     <ClInclude Include="PhysicsEngine.h" />
+    <ClInclude Include="PhysicsThread.h" />
     <ClInclude Include="QuadTree.h" />
     <ClInclude Include="Rect.h" />
     <ClInclude Include="RenderEngineVulkan.h" />
