--- a/ParticleStorm/ParticleStorm.vcxproj.filters
+++ b/ParticleStorm/ParticleStorm.vcxproj.filters
@@ -107,6 +107,9 @@
     <ClInclude Include="WorkerThreadPool.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Range.h">
+      <Filter>Header Files\Utils</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="test.frag">
