Refactored the QuadTree to be reference based to make it simpler and more thread friendly

--- a/ParticleStorm/ParticleStorm.vcxproj.filters
+++ b/ParticleStorm/ParticleStorm.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClCompile Include="WorkerThreadPool.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ParticleBuffer.h">
+      <Filter>Header Files\Utils</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Environment.h">
