--- a/ParticleStorm/ParticleStorm.vcxproj
+++ b/ParticleStorm/ParticleStorm.vcxproj
@@ -127,7 +127,7 @@
     <ClCompile Include="Environment.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="NumberGenerator.cpp" />
-    <ClCompile Include="ParticleBuffer.h" />
+    <ClCompile Include="LazyVector.h" />
     <ClCompile Include="PhysicsEngine.cpp" />
     <ClCompile Include="QuadTree.cpp" />
     <ClCompile Include="Rect.cpp" />
@@ -139,6 +139,7 @@
   <ItemGroup>
     <ClInclude Include="ConcurrentVector.h" />
     <ClInclude Include="Environment.h" />
+    <ClInclude Include="LinearQuad.h" />
     <ClInclude Include="NumberGenerator.h" />
     <ClInclude Include="PhysicsEngine.h" />
     <ClInclude Include="QuadTree.h" />
