--- a/ParticleStorm/ParticleStorm.vcxproj
+++ b/ParticleStorm/ParticleStorm.vcxproj
@@ -130,6 +130,7 @@
     <ClCompile Include="NumberGenerator.cpp" />
     <ClCompile Include="PhysicsEngine.cpp" />
     <ClCompile Include="QuadTree.cpp" />
+    <ClCompile Include="QuadTreeHandler.cpp" />
     <ClCompile Include="Rect.cpp" />
     <ClCompile Include="RenderEngineVulkan.cpp" />
     <ClCompile Include="SessionManager.cpp" />
@@ -141,10 +142,12 @@
     <ClInclude Include="CollisionChecker.h" />
     <ClInclude Include="ConcurrentVector.h" />
     <ClInclude Include="Environment.h" />
+    <ClInclude Include="LinearQuad.h" />
     <ClInclude Include="MultiIntVector.h" />
     <ClInclude Include="NumberGenerator.h" />
     <ClInclude Include="PhysicsEngine.h" />
     <ClInclude Include="QuadTree.h" />
+    <ClInclude Include="QuadTreeHandler.h" />
     <ClInclude Include="Queue.h" />
     <ClInclude Include="Range.h" />
     <ClInclude Include="Rect.h" />
