--- a/ParticleStorm/ParticleStorm.vcxproj
+++ b/ParticleStorm/ParticleStorm.vcxproj
@@ -133,6 +133,10 @@
     <ClCompile Include="QuadTreeHandler.cpp" />
     <ClCompile Include="Rect.cpp" />
     <ClCompile Include="RenderEngineVulkan.cpp" />
+    <ClCompile Include="RenderEntity.cpp" />
+    <ClCompile Include="RenderEntityFactory.cpp" />
+    <ClCompile Include="RenderEntityInstanced.cpp" />
+    <ClCompile Include="RenderEntitySingular.cpp" />
     <ClCompile Include="SessionManager.cpp" />
     <ClCompile Include="Timer.cpp" />
     <ClCompile Include="WorkerThreadPool.cpp" />
@@ -152,6 +156,10 @@
     <ClInclude Include="Range.h" />
     <ClInclude Include="Rect.h" />
     <ClInclude Include="RenderEngineVulkan.h" />
+    <ClInclude Include="RenderEntity.h" />
+    <ClInclude Include="RenderEntityFactory.h" />
+    <ClInclude Include="RenderEntityInstanced.h" />
+    <ClInclude Include="RenderEntitySingular.h" />
     <ClInclude Include="SessionManager.h" />
     <ClInclude Include="Stats.h" />
     <ClInclude Include="Timer.h" />
