More work on RenderEntity system

--- a/ParticleStorm/ParticleStorm.vcxproj
+++ b/ParticleStorm/ParticleStorm.vcxproj
@@ -132,11 +132,13 @@
     <ClCompile Include="QuadTree.cpp" />
     <ClCompile Include="QuadTreeHandler.cpp" />
     <ClCompile Include="Rect.cpp" />
+    <ClCompile Include="RenderDataCore.cpp" />
     <ClCompile Include="RenderEngineVulkan.cpp" />
     <ClCompile Include="RenderEntity.cpp" />
     <ClCompile Include="RenderEntityFactory.cpp" />
-    <ClCompile Include="RenderEntityInstanced.cpp" />
-    <ClCompile Include="RenderEntitySingular.cpp" />
+    <ClCompile Include="RenderDataInstanced.cpp" />
+    <ClCompile Include="RenderDataSingular.cpp" />
+    <ClCompile Include="RenderTransform.cpp" />
     <ClCompile Include="SessionManager.cpp" />
     <ClCompile Include="Timer.cpp" />
     <ClCompile Include="WorkerThreadPool.cpp" />
@@ -155,11 +157,13 @@
     <ClInclude Include="Queue.h" />
     <ClInclude Include="Range.h" />
     <ClInclude Include="Rect.h" />
+    <ClInclude Include="RenderDataCore.h" />
     <ClInclude Include="RenderEngineVulkan.h" />
     <ClInclude Include="RenderEntity.h" />
     <ClInclude Include="RenderEntityFactory.h" />
-    <ClInclude Include="RenderEntityInstanced.h" />
-    <ClInclude Include="RenderEntitySingular.h" />
+    <ClInclude Include="RenderDataInstanced.h" />
+    <ClInclude Include="RenderDataSingular.h" />
+    <ClInclude Include="RenderTransform.h" />
     <ClInclude Include="SessionManager.h" />
     <ClInclude Include="Stats.h" />
     <ClInclude Include="Timer.h" />
